add public key to register resp
